--- a/style.css
+++ b/style.css
@@ -105,3 +105,9 @@ ul li span{
 ul li span:hover{
     background:#ffffff;
 }
+
+@media screen and (max-width: 450px) {
+    .row{
+       margin-left: -15px;
+    }
+}
